# community-bot-aiogram

./: README.md  compose.yml  pyproject.toml
bot/: __main__.py
bot/factory/: bot.py  dispatcher.py
bot/handlers/: __init__.py
bot/handlers/messages/: __init__.py  hackathons.py  start.py
bot/lib/: settings.py
bot/middlewares/outer/: database.py  user.py
bot/services/database/: context.py
bot/services/database/models/: __init__.py  user.py
bot/services/database/repositories/: base.py  repository.py  user_repository.py
bot/utils/: serializable.py
